[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnem-cli"
# Kept in sync with [workspace.package].version in ../../Cargo.toml.
# The release workflow updates this via sed before publishing.
version = "0.1.7"
description = "Git for AI Agent Knowledge - pip installer for the mnem CLI binary."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "mnem contributors" }]
keywords = ["knowledge-graph", "agent-memory", "mcp", "llm", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
mnem = "mnem_cli:main"

[project.urls]
Homepage      = "https://github.com/Uranid/mnem"
Repository    = "https://github.com/Uranid/mnem"
Documentation = "https://github.com/Uranid/mnem/blob/main/docs/QUICKSTART.md"
Changelog     = "https://github.com/Uranid/mnem/releases"

[tool.hatch.build.targets.wheel]
packages = ["mnem_cli"]
