[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnem-cli"
# Kept in sync with [workspace.package].version in ../../Cargo.toml.
# The release workflow updates this via sed before publishing.
version = "0.1.7"
description = "Git for AI Agent Knowledge - pip installer for the mnem CLI binary."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "mnem contributors" }]
keywords = ["knowledge-graph", "agent-memory", "mcp", "llm", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
mnem = "mnem_cli:main"

[project.urls]
Homepage      = "https://github.com/Uranid/mnem"
Repository    = "https://github.com/Uranid/mnem"
Documentation = "https://github.com/Uranid/mnem/blob/main/docs/QUICKSTART.md"
Changelog     = "https://github.com/Uranid/mnem/releases"

# -----------------------------------------------------------------------------
# Wheel build
#
# Each per-platform wheel is produced by setting MNEM_CLI_PLAT_TAG in the env
# before invoking `python -m build --wheel`. release.yml stages the binary
# and shared libs into mnem_cli/_vendor/{bin,lib}/ first; the directory must
# exist at build time, which is why a .gitkeep is committed. NEVER commit
# actual binaries; that's the release pipeline's job.
#
# Sdist builds also work via `python -m build --sdist`. The sdist intentionally
# excludes _vendor/ entirely (see [tool.hatch.build.targets.sdist] below) so
# installing from source produces a wheel with no embedded binary; `mnem` then
# falls into the SystemExit branch pointing users at `cargo install`.
# -----------------------------------------------------------------------------

[tool.hatch.build.targets.wheel]
# `packages = ["mnem_cli"]` recursively includes the package, so the staged
# `mnem_cli/_vendor/{bin,lib}/...` tree is picked up automatically. release.yml
# is responsible for populating that directory before the build; in source
# control only a .gitkeep lives there.
packages = ["mnem_cli"]

# Custom build hook drives the platform tag from the MNEM_CLI_PLAT_TAG env var.
# See hatch_build.py.
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

# -----------------------------------------------------------------------------
# Sdist build: source only, no vendored binary, no build hook needed.
# -----------------------------------------------------------------------------

[tool.hatch.build.targets.sdist]
include = [
    "/mnem_cli",
    "/README.md",
    "/pyproject.toml",
    "/hatch_build.py",
]
exclude = [
    "mnem_cli/_vendor/bin",
    "mnem_cli/_vendor/lib",
]
